istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: brew-and-bliss-gateway
spec:
  selector:
    istio: ingressgateway   
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: brew-and-bliss
spec:
  hosts:
  - "*"
  gateways:
  - brew-and-bliss-gateway
  http:
  - match:
    - uri:
       prefix: /register
    route:
    - destination:
        host: customer-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /order
    route:
    - destination:
        host: order-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 3000
